# pico_parrot

./: CMakeLists.txt  LICENSE  README.md  X_BUILD.sh  Y_QUICK.sh  fs.c  fs.h  main.cpp
kicad/pico_parrot/: fp-info-cache  fp-lib-table  pico_parrot.kicad_pcb  pico_parrot.kicad_prl  pico_parrot.kicad_pro  pico_parrot.kicad_sch  sym-lib-table
kicad/pico_parrot/footprints.pretty/: PJ-307_Modded.kicad_mod
kicad/pico_parrot/production/pico_parrot_2023-10-10_11-04-39/: bom.csv  designators.csv  netlist.ipc  positions.csv
kicad/pico_parrot/production/pico_parrot_2023-10-20_14-58-11/: bom.csv  designators.csv  netlist.ipc  positions.csv
